[package]
name = "tcp-core"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/tcp"
description = """
A lightweight implementation of the Transmission Control Protocol (TCP), 
primarily based on RFC 793.
"""
categories = ["network-programming"]
keywords = ["io", "network"]

[dependencies]

[dev-dependencies]
proptest = "1.7.0"
