[package]
name = "tcp-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye <>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/tcp"
description = """
WebAssembly wrapper exposing tcp-core to a Svelte UI for interactive TCP 
simulations.
"""
categories = ["wasm"]
keywords = ["webassembly", "wasm", "network"]

[package.metadata.docs.rs]
no-deps = true

[dependencies]
tcp-core = { path = "../tcp-core" }
