[package]
name = "tcp-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye <>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/tcp"
description = """
WebAssembly wrapper for tcp-core enabling interactive web-based TCP simulations.
"""
categories = ["wasm"]
keywords = ["webassembly", "wasm"]

[dependencies]
tcp-core = { path = "../tcp-core" }
